--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -13,12 +13,11 @@ edition = "2021"
 tauri-build = { version = "1.2", features = [] }
 
 [dependencies]
-tauri = { version = "1.2", features = ["shell-open"] }
-serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-reqwest = { version = "0.11", features = ["json"] }
-cron = "0.12.0"
-chrono = "0.4.24"
+cocoa = "0.24.1"
+objc = "0.2.7"
+serde = { version = "1.0", features = ["derive"] }
+tauri = { version = "1.2", features = ["notification-all", "shell-open", "system-tray"] }
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
