--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "swr": "^2.0.3"
+    "swr": "^2.0.3",
+    "tauri-plugin-store-api": "https://github.com/tauri-apps/tauri-plugin-store"
   },
   "devDependencies": {
     "@svgr/webpack": "^6.5.1",
