--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -15,7 +15,8 @@ tauri-build = { version = "1.2", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.2", features = ["notification-all", "shell-open", "system-tray"] }
+tauri = { version = "1.2", features = ["clipboard-all", "notification-all", "path-all", "shell-open", "system-tray"] }
+tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
