--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,6 +17,9 @@ serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.2", features = ["clipboard-all", "notification-all", "path-all", "shell-open", "system-tray"] }
 tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
+tokio = { version = "1.26.0", features = ["full"] }
+tokio-cron-scheduler = "0.9.4"
+chrono = "0.4.24"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
