--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -20,6 +20,7 @@ tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", 
 tokio = { version = "1.26.0", features = ["full"] }
 tokio-cron-scheduler = "0.9.4"
 chrono = "0.4.24"
+reqwest = { version = "0.11.14", features = ["json"] }
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
