--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -13,13 +13,13 @@ edition = "2021"
 tauri-build = { version = "1.2", features = [] }
 
 [dependencies]
-serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 tauri = { version = "1.2", features = ["clipboard-all", "notification-all", "path-all", "shell-open", "system-tray"] }
 tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
 tokio = { version = "1.26.0", features = ["macros"] }
 tokio-cron-scheduler = "0.9.4"
-chrono = "0.4.24"
+chrono = { version = "0.4.24", features = ["serde"] }
 reqwest = { version = "0.11.14", features = ["json"] }
 log = "0.4.17"
 env_logger = { version = "0.10.0", features = ["color", "humantime"] }
