--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,12 +17,13 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tauri = { version = "1.2", features = ["clipboard-all", "notification-all", "path-all", "shell-open", "system-tray"] }
 tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
-tokio = { version = "1.26.0", features = ["macros"] }
+tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
 tokio-cron-scheduler = "0.9.4"
 chrono = { version = "0.4.24", features = ["serde"] }
 reqwest = { version = "0.11.14", features = ["json"] }
 log = "0.4.17"
 env_logger = { version = "0.10.0", features = ["color", "humantime"] }
+moka = { version = "0.10", features = ["future"] }
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
