--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -24,6 +24,7 @@ reqwest = { version = "0.11.14", features = ["json"] }
 log = "0.4.17"
 env_logger = { version = "0.10.0", features = ["color", "humantime"] }
 moka = { version = "0.10", features = ["future"] }
+arboard = "3.2.0"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
